--- a/jordbruksmark/templates/base.html
+++ b/jordbruksmark/templates/base.html
@@ -14,4 +14,10 @@
             {% endblock %}
         </div>
     {% endblock %}
+
+<script type="text/javascript" src="/static/external/jquery/jquery-3.1.1.min.js"></script>
+
+{% block scripts %}
+    {# no scripts by default #}
+{% endblock %}
 </body>
