first running version

--- a/jordbruksmark/templates/base.html
+++ b/jordbruksmark/templates/base.html
@@ -7,7 +7,12 @@
 <body>
     {% block allcontent %}
         <div>
-         
+        <a href="wp_cultivation">Wochenplan Anzucht</a><br/>
+	<a href="wp_plant">Wochenplan Setzen</a><br/>
+	<a href="wp_sowing"> Wochenplan Direktsaat</a><br/>
+	<a href="sets">Saetze</a><br/>
+	<a href="weeks">Wochen Mengen</a><br/>
+	<a href="../admin">admin</a><br/>
         </div>
         <div>
             {% block content %}
