--- a/jordbruksmark/templates/week_plan_cultivation_list.html
+++ b/jordbruksmark/templates/week_plan_cultivation_list.html
@@ -1,12 +1,12 @@
-<table>
-<th>
-<td>Kultur</td>
-<td>Satz NR</td>
-<td>Sorte</td>
-<td>Anz Anzucht</td>
-<td>Saatmenge g</td>
-<td>Bem Anzucht</td>
-</th>
+<table border=1>
+<tr>
+<th>Kultur</th>
+<th>Satz NR</th>
+<th>Sorte</th>
+<th>Anz Anzucht</th>
+<th>Saatmenge g</th>
+<th>Bem Anzucht</th>
+</tr>
 {% for set in sets %}
 <tr>
 <td>{{ set.kultur.name }}</td>
